tests/paczka1/fuzzy1/51862626.err
Error in line 1: eKIDTCyfMU A666 61,7
Error in line 5: rVVgLrkUS A666 75,8
Error in line 11: mbXQ A704 16,3
Error in line 25: mbXQ A152 -2,3
Error in line 20: chkLJvVF4uT S692 44,9
Error in line 13: mbXQ A152 58,3
Error in line 26: chkLJvVF4uT A152 56,9
Error in line 30: chkLJvVF4uT S692 92,2
Error in line 38: rVVgLrkUS A666 66,f
Error in line 34: 3lIUUueVvwy A666 66,2
